--- a/connect4Assignment.csproj
+++ b/connect4Assignment.csproj
@@ -46,11 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="computer.cs" />
     <Compile Include="connect4.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="connect4.Designer.cs">
       <DependentUpon>connect4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Menu.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
